# agentic_ai

./: .env.ref  README.md  WORKING.md  client.py  main.py  pyproject.toml  server.py
agent/: autonomous.py  executor.py  memory.py  planner.py  reflector.py  state.py  test_memory.py
